crates/galera-core/src/codegen/snapshots/galera_core__codegen__shapes__tests__rect_snapshot.snap
---
source: crates/galera-core/src/codegen/shapes.rs
expression: generate_with(RECT)
---
// Generado por Galera a partir de document.json.
// No editar a mano: este archivo se reescribe entero en cada compilación.
#set document(title: "Formas")
#set page(width: 210mm, height: 297mm, margin: 0pt)

// p1
#place(top + left, dx: 10mm, dy: 20mm)[#rect(width: 100mm, height: 50mm, fill: rgb("#1e40af"), stroke: (paint: rgb("#000000"), thickness: 0.5mm), radius: 3mm)] <el-r1>
